# swedish-illume

./: Makefile.am  README  configure.in
dicts/: Makefile.am  Swedish.dic  Swedish_Small.dic
keyboards/: Default-Swedish.kbd  Makefile.am  default-swedish.xcf
